Closed Bug 71222 Opened 24 years ago Closed 23 years ago

popup dialogues that demand input lock browser input in other windows

Categories

(Core :: XUL, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: joschi, Assigned: danm.moz)

References

Details

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; 0.8.1) Gecko/20010306
BuildID:    2001030605

I use IMP web mail, when it gets new mail it pops up a little "You have new
mail.  <ok>" dialogue.  it often happends that that dialogue gets covered up by
another moz window, i dont realise the dialogue exists and is waiting for me,
and i can't click on links in the top browser window

Reproducible: Always
Steps to Reproduce:
1. Popup a dialogue waiting on entry.
2. go to another moz window
3. try to cliock a link and see that it wont go until you close the dialogue...
Similar to bug 65521, but that one is Linux-only....

assigning to XP Toolkit: Widgets
Assignee: asa → trudelle
Component: Browser-General → XP Toolkit/Widgets
QA Contact: doronr → jrgm
I don't get how to reproduce this. On windows, an alert (or prompt/confirm) is 
window modal, not application modal, and while an alert is up for one window
(blocking its use), another browser window is fully usable including clicking
on links. 

Can you attach a screenshot of what the dialog looks like, and/or put together 
a testcase of the code (js/html) that spins up that dialog. Thanks.
I have just tested it on both win 98 and win 2k.  It happens consistantly for
me.  Try this:

1) open 2 windows, one that has a visible link on it (yahoo.com)
2) in the second, go to a bogus URL (askjdlfasd.com) ... moz should popup a
dialogue saying it can't find that address
3) go back to the yahoo page without clicking ok, you shouldnt be able to click
any links
Summary: popup dialgues that demand input lock browser input in other windows → popup dialogues that demand input lock browser input in other windows
Okay, that dialog, spun up from necko is application-modal. 
Status: UNCONFIRMED → NEW
Ever confirmed: true
Then you shouldn't be able to switch to another window, right?  ->danm
Assignee: trudelle → danm
(Uh, duh.) Right, it's /not/ application-modal, it's window-modal, but it 
is blocking events from the other window being processed. 
*** Bug 54567 has been marked as a duplicate of this bug. ***
Target Milestone: --- → mozilla0.9.2
nsWebShells cache the current active event queue in their Create method. That's 
the queue onto which is placed the event to process a clicked link. That's also 
the queue that's stalled when any modal window is up. 'tis better to place the 
clicked link event on the current active event queue, not a cached one.
Status: NEW → ASSIGNED
Keywords: patch
Looks good to me.  (sr=rpotts)

The only change I'd make is to add an if-test for eventQueue after the 
NS_ASSERTION just in case :-)

+  aHandler->GetEventQueue(getter_AddRefs(eventQueue));
+  NS_ASSERTION(eventQueue, "no event queue");
   eventQueue->PostEvent(this);
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
patch is in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Keywords: patch
Resolution: --- → FIXED
verified fixed on win32; a necko modal warning dialog only blocks interaction 
with the parent window, not with other open windows. (Linux has bug 65521 in 
the way, and the Mac is just not into window-modality).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: